--- a/CSS Essentials/Flex Box/index.html
+++ b/CSS Essentials/Flex Box/index.html
@@ -10,6 +10,7 @@
     <!-- FLex box is a container that is applied to the parent container and its child is refer to as container items -->
      <div class="container">
         <div class="item"></div>
+        <div class="item item2"></div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
@@ -23,22 +24,13 @@
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
+        <div class="item  order1">100</div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-     </div>
+      
+
 </body>
 </html>
