Add more  Flex Box concepts new content

--- a/CSS Essentials/Box Model/index.html
+++ b/CSS Essentials/Box Model/index.html
@@ -10,5 +10,6 @@
     <!-- CSS BOX MODEL -->
     <div class="box1">This is div 1</div>
     <div class="box2">This is div 2</div>
+    <div class="box2">This is div 2</div>
 </body>
 </html>
